Add usage instructions in readme.md